List.of and Map.of replacing old initializations